--- a/Thesis.tex
+++ b/Thesis.tex
@@ -10,7 +10,7 @@
 
 \pagenumbering{roman}
 
-\cleardoublepage
+
  
 
 
@@ -19,9 +19,13 @@
 %Last thing to do :-)
 
 \tableofcontents
+\cleardoublepage
+
+\listoftables
+
+\listoffigures
 
 \mainmatter
-
 \input{Chapter1}
 \input{Chapter2}
 \input{Chapter3}
