--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -26,8 +26,18 @@
   publisher={Wiley}
 }
 
+@inproceedings{pennington2014glove,
+  title={Glove: Global vectors for word representation.},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher D},
+  booktitle={EMNLP},
+  volume={14},
+  pages={1532--1543},
+  year={2014}
+}
+
 @phdthesis{perinet2015,
-  TITLE = {{Distributional analysis applied to specialized corpora: reduction of data sparsity through context abstraction}},
+  TITLE = {{Analyse distributionnelle appliqu\'{e}e aux textes de sp\'{e}cialit\'{e} : r\'{e}duction de la
+  dispersion des donn\'{e}es par abstraction des  contextes}},
   AUTHOR = {P{\'e}rinet, Amandine},
   SCHOOL = {{Universit{\'e} Paris 13 ; Laboratoire d'Informatique M{\'e}dicale et d'Ing{\'e}nieurie des Connaissances en e-Sant{\'e}}},
   YEAR = {2015},
@@ -67,6 +77,7 @@
 @phdthesis{sahlgren2006word,
   title={The Word-Space Model: Using distributional analysis to represent syntagmatic and paradigmatic relations between words in high-dimensional vector spaces},
   author={Sahlgren, Magnus},
+  school={Stockholm University},
   year={2006}
 }
 
@@ -80,6 +91,13 @@
   url ={http://w4nderlu.st/teaching/word-embeddings},
 }
 
+ @inproceedings{lee2001algorithms,
+   title={Algorithms for non-negative matrix factorization},
+   author={Lee, Daniel D and Seung, H Sebastian},
+   booktitle={Advances in neural information processing systems},
+   pages={556--562},
+   year={2001}
+ }
  
 @article{de1916course,
   title={Course in general linguistics (trans. Roy Harris)},
@@ -149,7 +167,17 @@
                Edition},
   edition = {3rd},              
   year      = {2017}
-addendum={Draft on webpage at \url{https://web.stanford.edu/~jurafsky/slp3/}}
+addendum={Draft on webpage at https://web.stanford.edu/~jurafsky/slp3/}
+}
+
+@article{bengio2003neural,
+  title={A neural probabilistic language model},
+  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
+  journal={Journal of machine learning research},
+  volume={3},
+  number={Feb},
+  pages={1137--1155},
+  year={2003}
 }
 
 
@@ -369,6 +397,16 @@ addendum={Draft on webpage at \url{https://web.stanford.edu/~jurafsky/slp3/}}
   publisher = {University of Southern California},
 }
 
+@inproceedings{ozkan2010latent,
+  title={Latent mixture of discriminative experts for multimodal prediction modeling},
+  author={Ozkan, Derya and Sagae, Kenji and Morency, Louis-Philippe},
+  booktitle={Proceedings of the 23rd International Conference on Computational Linguistics},
+  pages={860--868},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
+
+
 @InCollection{hope2013maxmax,
   author    = {Hope, David and Keller, Bill},
   title     = {MaxMax: a graph-based soft clustering algorithm applied to word sense induction},
@@ -514,6 +552,23 @@ year = "2010",
 publisher = "Wiley-Blackwell",
 
 }
+
+@inproceedings{phan2008learning,
+  title={Learning to classify short and sparse text \& web with hidden topics from large-scale data collections},
+  author={Phan, Xuan-Hieu and Nguyen, Le-Minh and Horiguchi, Susumu},
+  booktitle={Proceedings of the 17th international conference on World Wide Web},
+  pages={91--100},
+  year={2008},
+  organization={ACM}
+}
+@inproceedings{goldberg2013dataset,
+  title={A Dataset of Syntactic-Ngrams over Time from a Very Large Corpus of English Books.},
+  author={Goldberg, Yoav and Orwant, Jon},
+  booktitle={* SEM@ NAACL-HLT},
+  pages={241--247},
+  year={2013}
+}
+
 
 @book{Manning2008,
  author = {Manning, Christopher D. and Raghavan, Prabhakar and Sch\"{u}tze, Hinrich},
@@ -1125,6 +1180,34 @@ publisher = "Wiley-Blackwell",
   institution={Idiap}
 }
 
+@inproceedings{baroni2014don,
+  title={Don't count, predict! A systematic comparison of context-counting vs. context-predicting semantic vectors.},
+  author={Baroni, Marco and Dinu, Georgiana and Kruszewski, Germ{\'a}n},
+  booktitle={ACL (1)},
+  pages={238--247},
+  year={2014}
+}
+
+@inproceedings{allison2006another,
+  title={Another look at the data sparsity problem},
+  author={Allison, Ben and Guthrie, David and Guthrie, Louise},
+  booktitle={International Conference on Text, Speech and Dialogue},
+  pages={327--334},
+  year={2006},
+  organization={Springer}
+}
+
+
+@inproceedings{gabrilovich2007computing,
+  title={Computing semantic relatedness using wikipedia-based explicit semantic analysis.},
+  author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+  booktitle={IJcAI},
+  volume={7},
+  pages={1606--1611},
+  year={2007}
+}
+
+
 @inproceedings{levy2014neural,
   title={Neural word embedding as implicit matrix factorization},
   author={Levy, Omer and Goldberg, Yoav},
@@ -1132,6 +1215,16 @@ publisher = "Wiley-Blackwell",
   pages={2177--2185},
   year={2014}
 }
+
+@inproceedings{ferret2010testing,
+  title={Testing Semantic Similarity Measures for Extracting Synonyms from a Corpus.},
+  author={Ferret, Olivier},
+  booktitle={LREC},
+  volume={10},
+  pages={3338--3343},
+  year={2010}
+}
+
 
 @article{bruni2014multimodal,
   title={Multimodal distributional semantics.},
