--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -9,7 +9,7 @@
 \vspace*{0.3cm}
 \noindent \large {to obtain the title of} \\
 \vspace*{0.3cm}
-\noindent \LARGE \textbf{PhD of Science} \\
+\noindent \LARGE \textbf{PhD of Computer Science} \\
 \vspace*{0.3cm}
 \noindent \Large of the University of Lyon - Lumière 2\\
 \noindent \Large \textbf{Specialty : \textsc{Computer Science}}\\
